# Predictive_Maintenance_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  configure_crestforge.py  docker-compose.yml  pyproject.toml  seed_crestforge.py
UI/: chat_test.html  index.html  package-lock.json  package.json  style.css
UI/src/: App.jsx
UI/src/components/: AnalyticsPanel.jsx  ChatPanel.jsx  GeometricBg.jsx  HealthPanel.jsx  SessionPanel.jsx  Sidebar.jsx  Toast.jsx  ToolsPanel.jsx  TopBar.jsx
UI/src/styles/: globals.css
UI/src/utils/: markdown.js
docs/: CODEBASE.md  CRESTFORGE_SETUP_GUIDE.md  CRESTFORGE_USE_CASE.md  IMPROVEMENTS.md  PROJECT_OVERVIEW.md  RESTRUCTURE_STRATEGY.md  redis-iris-notes.md  response_sample.md
docs/UI/: DESIGN.md  DEV.md  dashboard.md
docs/api/: ANALYTICS_API.md  TESTING_GUIDE.md
docs/changes/: 2026-07-14.md
docs/testing/: DOCKER.md  prompt-samples.md
docs/tools/: write-tools.md
src/: __init__.py  conftest.py
src/agent/: __init__.py  agent.py  cli.py  config.py  memory.py  model_provider.py  prompts.py  tools.py
src/api/: __init__.py  analytics.py  app.py  models.py  state.py
src/crestforge/: __init__.py  configure.py  seed.py
src/redis_iris_agent/: __init__.py  agent.py  cli.py  config.py  memory.py  model_provider.py
src/tests/unit/: test_agent.py  test_memory.py  test_tools.py
src/utils/: tool_names.py
